Fixed Dockerfile entrypoint where configs were incorrect

--- a/analyzers/CIRCLPassiveDNS/Dockerfile
+++ b/analyzers/CIRCLPassiveDNS/Dockerfile
@@ -9,16 +9,16 @@ LABEL author="Nils Kuhnert, CERT-Bund" \
       description="Check CIRCL's Passive DNS for a given domain or URL." \
       license="AGPL-V3" \
       source="https://github.com/TheHive-Project/Cortex-Analyzers" \
-      title="CIRCL" \
+      title="CIRCLPassiveDNS" \
       url="https://github.com/BSI-CERT-Bund/cortex-analyzers" \
       vendor="TheHive" \
       version="2.0.0"
 
 WORKDIR /worker
 
-COPY . CIRCL
+COPY . CIRCLPassiveDNS
 
 # Project determined to be Python, installing deps
-RUN pip install --no-cache-dir -r CIRCL/requirements.txt
+RUN pip install --no-cache-dir -r CIRCLPassiveDNS/requirements.txt
 
 ENTRYPOINT CIRCLPassiveDNS/circl_passivedns.py
