--- a/analyzers/CyberCrime-Tracker/Dockerfile
+++ b/analyzers/CyberCrime-Tracker/Dockerfile
@@ -9,16 +9,16 @@ LABEL author="ph34tur3" \
       description="Search cybercrime-tracker.net for C2 servers." \
       license="AGPL-V3" \
       source="https://github.com/TheHive-Project/Cortex-Analyzers" \
-      title="CyberCrimeTracker" \
+      title="CyberCrime-Tracker" \
       url="https://github.com/ph34tur3/Cortex-Analyzers" \
       vendor="TheHive" \
       version="1.0.0"
 
 WORKDIR /worker
 
-COPY . CyberCrimeTracker
+COPY . CyberCrime-Tracker
 
 # Project determined to be Python, installing deps
-RUN pip install --no-cache-dir -r CyberCrimeTracker/requirements.txt
+RUN pip install --no-cache-dir -r CyberCrime-Tracker/requirements.txt
 
 ENTRYPOINT CyberCrime-Tracker/cct.py
