--- a/analyzers/MnemonicPDNS/Dockerfile
+++ b/analyzers/MnemonicPDNS/Dockerfile
@@ -8,16 +8,16 @@ FROM python:3-alpine
 LABEL author="Michael Stensrud, Nordic Financial CERT" \
       license="AGPL-V3" \
       source="https://github.com/TheHive-Project/Cortex-Analyzers" \
-      title="Mnemonic_pDNS" \
+      title="MnemonicPDNS" \
       url="https://passivedns.mnemonic.no/search" \
       vendor="TheHive" \
       version="3.0.0"
 
 WORKDIR /worker
 
-COPY . Mnemonic_pDNS
+COPY . MnemonicPDNS
 
 # Project determined to be Python, installing deps
-RUN pip install --no-cache-dir -r Mnemonic_pDNS/requirements.txt
+RUN pip install --no-cache-dir -r MnemonicPDNS/requirements.txt
 
 ENTRYPOINT MnemonicPDNS/pdns.py
