--- a/analyzers/StaxxSearch/Dockerfile
+++ b/analyzers/StaxxSearch/Dockerfile
@@ -9,16 +9,16 @@ LABEL author="Robert Nixon" \
       description="Fetch observable details from an Anomali STAXX instance." \
       license="AGPL-V3" \
       source="https://github.com/TheHive-Project/Cortex-Analyzers" \
-      title="staxx" \
+      title="StaxxSearch" \
       url="https://github.com/robertnixon2003/Cortex-Analyzers" \
       vendor="TheHive" \
       version="1.0.0"
 
 WORKDIR /worker
 
-COPY . staxx
+COPY . StaxxSearch
 
 # Project determined to be Python, installing deps
-RUN pip install --no-cache-dir -r staxx/requirements.txt
+RUN pip install --no-cache-dir -r StaxxSearch/requirements.txt
 
 ENTRYPOINT StaxxSearch/staxx-cortex.py
