Final passthrough resolving dep declarations & execution paths

--- a/analyzers/Urlscan.io/Dockerfile
+++ b/analyzers/Urlscan.io/Dockerfile
@@ -9,16 +9,16 @@ LABEL author="ninoseki" \
       description="Search IPs, domains, hashes or URLs on urlscan.io" \
       license="MIT" \
       source="https://github.com/TheHive-Project/Cortex-Analyzers" \
-      title="Urlscan" \
+      title="Urlscan.io" \
       url="https://github.com/ninoseki/cortex_urlscan_analyzer" \
       vendor="TheHive" \
       version="0.1.0"
 
 WORKDIR /worker
 
-COPY . Urlscan
+COPY . Urlscan.io
 
 # Project determined to be Python, installing deps
-RUN pip install --no-cache-dir -r Urlscan/requirements.txt
+RUN pip install --no-cache-dir -r Urlscan.io/requirements.txt
 
 ENTRYPOINT Urlscan.io/urlscan_analyzer.py
