Using python alpine

--- a/analyzers/Abuse_Finder/Dockerfile
+++ b/analyzers/Abuse_Finder/Dockerfile
@@ -1,6 +1,19 @@
-FROM python:3.6
+FROM python:3-alpine
+
+LABEL author="CERT-BDF" \
+      description="Find abuse contacts associated with domain names, URLs, IPs and email addresses." \
+      license="AGPL-V3" \
+      source="https://github.com/TheHive-Project/Cortex-Analyzers" \
+      title="Abuse_Finder" \
+      url="https://github.com/TheHive-Project/Cortex-Analyzers" \
+      vendor="TheHive" \
+      version="3.0.0"
 
 WORKDIR /worker
+
 COPY . Abuse_Finder
-RUN pip3 install --no-cache-dir -r Abuse_Finder/requirements.txt
+
+# Project determined to be Python, installing deps
+RUN pip install --no-cache-dir -r Abuse_Finder/requirements.txt
+
 ENTRYPOINT Abuse_Finder/abusefinder.py
