--- a/.drone.yml
+++ b/.drone.yml
@@ -118,7 +118,7 @@ steps:
   - name: Prepare documentation files
     image: thehiveproject/doc-builder
     settings:
-      - type: <type>
+      type: <type>
     when:
       branch:
       - mkdocs
