--- a/.drone.yml
+++ b/.drone.yml
@@ -33,6 +33,8 @@ steps:
       user: {from_secret: docker_username}
       password: {from_secret: docker_password}
     when:
+      branch: 
+      - develop
       event: {exclude: [tag]}
 
   - name: build snapshot responders
@@ -43,6 +45,8 @@ steps:
       user: {from_secret: docker_username}
       password: {from_secret: docker_password}
     when:
+      branch:
+      - develop
       event: {exclude: [tag]}
 
   - name: build catalogs
