--- a/.drone.yml
+++ b/.drone.yml
@@ -127,7 +127,7 @@ steps:
       type: Cortex-Neurons
     when:
       branch:
-      - mkdocs
+      - release/2.8.0
 
   - name: Publish documentation 
     image: thehiveproject/mkdocs
@@ -135,4 +135,4 @@ steps:
       token: { from_secret: github_token }
     when:
       branch:
-      - master
+      - release/2.8.0
