--- a/.drone.yml
+++ b/.drone.yml
@@ -49,14 +49,6 @@ steps:
       - develop
       event: {exclude: [tag]}
 
-  - name: build catalogs
-    image: thehiveproject/neurons-build-catalogs
-    when:
-      branch:
-      - develop
-      - master
-
-  
   - name: upload catalogs to bintray
     image: thehiveproject/drone-bintray
     settings:
@@ -89,8 +81,7 @@ steps:
       --file responders/responders-stable.json \
       --repo cortexneurons
     when:
-      branch:
-      - master
+      event: [tag]
 
   - name: upload devel catalogs to bintray
     image: thehiveproject/drone-bintray
@@ -121,6 +112,13 @@ steps:
     when:
       branch:
       - develop
+
+  - name: build catalogs
+    image: thehiveproject/neurons-build-catalogs
+    when:
+      branch:
+      - develop
+      - master
 
   - name: Prepare documentation files
     image: thehiveproject/doc-builder
