--- a/analyzers/FileInfo/Dockerfile
+++ b/analyzers/FileInfo/Dockerfile
@@ -11,7 +11,9 @@ RUN apt install -y -q libboost-regex-dev                           \
 RUN git clone https://github.com/JusticeRage/Manalyze.git       && \
 cd Manalyze                                                     && \
 cmake .                                                         && \
-make -j5
+make -j5                                                        && \
+cd bin/yara_rules                                               && \ 
+python2 update_clamav_signatures.py
 RUN apt update                                                  && \
     apt install -y -q libfuzzy-dev libimage-exiftool-perl       && \
     rm -rf /var/lib/apt/lists/*                                 && \
