--- a/.drone.yml
+++ b/.drone.yml
@@ -62,68 +62,6 @@ steps:
     when:
       event: [tag]
 
-
-# Bintray will not be used anymore. We keep it until Feb 21
-
-  - name: upload catalogs to bintray
-    image: thehiveproject/drone-bintray
-    settings:
-      user: {from_secret: bintray_user}
-      key: {from_secret: bintray_key}
-      subject: thehive-project
-      package: catalogs
-      version: latest
-      override: 1
-      publish: 1
-    commands:
-    - |
-      export PLUGIN_USER
-      export PLUGIN_KEY
-      export PLUGIN_SUBJECT
-      export PLUGIN_PACKAGE
-      export PLUGIN_VERSION
-      export PLUGIN_OVERRIDE
-      export PLUGIN_PUBLISH
-      upload \
-      --file analyzers/analyzers.json \
-      --repo cortexneurons
-      upload \
-      --file analyzers/analyzers-stable.json \
-      --repo cortexneurons
-      upload \
-      --file responders/responders.json \
-      --repo cortexneurons
-      upload \
-      --file responders/responders-stable.json \
-      --repo cortexneurons
-    when:
-      event: [tag]
-
-  - name: upload report-templates to bintray
-    image: thehiveproject/drone-bintray
-    settings:
-      user: {from_secret: bintray_user}
-      key: {from_secret: bintray_key}
-      subject: thehive-project
-      package: report-templates
-      version: latest
-      override: 1
-      publish: 1
-    commands:
-    - |
-      export PLUGIN_USER
-      export PLUGIN_KEY
-      export PLUGIN_SUBJECT
-      export PLUGIN_PACKAGE
-      export PLUGIN_VERSION
-      export PLUGIN_OVERRIDE
-      export PLUGIN_PUBLISH
-      upload \
-      --file analyzers/report-templates.zip \
-      --repo binary
-    when:
-      event: [tag]
-
   - name: upload catalogs and report-templates package to package server
     image: appleboy/drone-scp
     settings:
@@ -143,37 +81,6 @@ steps:
 
   - name: build devel catalogs
     image: thehiveproject/neurons-build-catalogs
-    when:
-      branch: [develop]
-
-
-# Bintray will not be used anymore. We keep it until Feb 21
-  - name: upload devel catalogs to bintray
-    image: thehiveproject/drone-bintray
-    settings:
-      user: {from_secret: bintray_user}
-      key: {from_secret: bintray_key}
-      subject: thehive-project
-      package: catalogs
-      version: latest
-      override: 1
-      publish: 1
-    commands:
-    - |
-      export PLUGIN_USER
-      export PLUGIN_KEY
-      export PLUGIN_SUBJECT
-      export PLUGIN_PACKAGE
-      export PLUGIN_VERSION
-      export PLUGIN_OVERRIDE
-      export PLUGIN_PUBLISH
-      upload \
-      --file analyzers/analyzers-devel.json \
-      --repo cortexneurons
-
-      upload \
-      --file responders/responders-devel.json \
-      --repo cortexneurons
     when:
       branch: [develop]
 
@@ -212,8 +119,8 @@ steps:
     settings:
       worker_path: analyzers
       namespace: cortexneurons
-      registry_dockerhub: {from_secret: docker_credentials}
-      registry_harbor: {from_secret: harbor_credentials}
+      registry_dockerhub: {from_secret: registry_dockerhub}
+      registry_harbor: {from_secret: registry_harbor}
       stable: true
       force: true
     when:
@@ -224,8 +131,8 @@ steps:
     settings:
       worker_path: responders
       namespace: cortexneurons
-      registry_dockerhub: {from_secret: docker_credentials}
-      registry_harbor: {from_secret: harbor_credentials}
+      registry_dockerhub: {from_secret: registry_dockerhub}
+      registry_harbor: {from_secret: registry_harbor}
       stable: true
       force: true
     when:
