--- a/.drone.yml
+++ b/.drone.yml
@@ -57,14 +57,6 @@ steps:
     when:
       event: [tag]
 
-  - name: build report-templates zip package
-    image: thehiveproject/neurons-build-report-templates
-    when:
-      event: [tag]
-
-
-# Bintray will not be used anymore. We keep it until Feb 21
-
   - name: upload catalogs to bintray
     image: thehiveproject/drone-bintray
     settings:
@@ -99,32 +91,7 @@ steps:
     when:
       event: [tag]
 
-  - name: upload report-templates to bintray
-    image: thehiveproject/drone-bintray
-    settings:
-      user: {from_secret: bintray_user}
-      key: {from_secret: bintray_key}
-      subject: thehive-project
-      package: report-templates
-      version: latest
-      override: 1
-      publish: 1
-    commands:
-    - |
-      export PLUGIN_USER
-      export PLUGIN_KEY
-      export PLUGIN_SUBJECT
-      export PLUGIN_PACKAGE
-      export PLUGIN_VERSION
-      export PLUGIN_OVERRIDE
-      export PLUGIN_PUBLISH
-      upload \
-      --file analyzers/report-templates.zip \
-      --repo binary
-    when:
-      event: [tag]
-
-  - name: upload catalogs and report-templates package to package server
+  - name: upload catalogs to package server
     image: appleboy/drone-scp
     settings:
       host: {from_secret: package_host}
@@ -136,7 +103,6 @@ steps:
         - analyzers/analyzers-stable.json
         - responders/responders.json
         - responders/responders-stable.json
-        - analyzers/report-templates.zip
       strip_components: 1
     when:
       event: [tag]
@@ -146,8 +112,6 @@ steps:
     when:
       branch: [develop]
 
-
-# Bintray will not be used anymore. We keep it until Feb 21
   - name: upload devel catalogs to bintray
     image: thehiveproject/drone-bintray
     settings:
