--- a/analyzers/CISMCAP/Dockerfile
+++ b/analyzers/CISMCAP/Dockerfile
@@ -1,7 +1,6 @@
 FROM python:3.10-alpine
-ARG name=CISMCAP
 WORKDIR /worker
-COPY requirements.txt ${name}/
-RUN pip3 install --no-cache-dir -r ${name}/requirements.txt
-COPY . ${name}
-ENTRYPOINT ["python3", "${name}/mcap.py"]
+COPY requirements.txt CISMCAP/
+RUN pip3 install --no-cache-dir -r CISMCAP/requirements.txt
+COPY . CISMCAP/
+ENTRYPOINT ["python3", "CISMCAP/mcap.py"]
