--- a/responders/KnowBe4/KnowBe4.json
+++ b/responders/KnowBe4/KnowBe4.json
@@ -50,7 +50,7 @@
         {
             "name": "risk_level",
             "description": "Specify the desired risk level. https://developer.knowbe4.com/events/#tag/Events/paths/~1events/post",
-            "type": "integer",
+            "type": "number",
             "multi": false,
             "required": false,
             "defaultValue": 10
