--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Build Analyzers with builder
+      - name: Build responders
         uses: docker://thehiveproject/cortex-neurons-builder:latest
         with:
           args: |
